modified: about_us.css, fix cards showing problem on small screen device, do some change on the name display card

--- a/about_us/about_us.css
+++ b/about_us/about_us.css
@@ -100,6 +100,7 @@ p
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    flex-wrap: wrap;
     position: fixed;
     top: 0;
     left: 0;
@@ -181,6 +182,7 @@ p
     display: flex;
     flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 3%;
     margin: 3% 0 3% 0;
 }
@@ -234,10 +236,19 @@ p
     color: var(--fontcolor_header);
 }
 
+.card-detail p
+{
+    text-align: left;
+    padding-left: 5%;
+}
+
 .personal-name
 {
     font-size: 36px;
     line-height: 1em;
+    margin: 0;
+    padding-top: 9%;
+    padding-left: 5%;
 }
 
 .description
